Report Explorer: added progress ring

--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/Sdl.Community.PostEdit.Versions.csproj
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/Sdl.Community.PostEdit.Versions.csproj
@@ -62,6 +62,9 @@
     <Reference Include="Sdl.Desktop.IntegrationApi.Extensions">
       <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Sdl.Desktop.Platform.Controls">
+      <HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Controls.dll</HintPath>
+    </Reference>
     <Reference Include="Sdl.Desktop.Platform.Styles">
       <HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Styles.dll</HintPath>
     </Reference>
