--- a/LanguageWeaver_Sonar.yml
+++ b/LanguageWeaver_Sonar.yml
@@ -16,10 +16,17 @@ pr:
 
 variables: 
 - group: 'LanguageWeaver Version'
+- template: build/jobs/branch-variables.yml
+- name: buildPlatform 
+  value: 'Any CPU'
+- name: buildConfiguration
+  value: 'Release'
+- name: pathToPublish
+  value: 'DSI Viewer\Sdl.Community.SdiViewer\bin\Release\net48\Sdl.Community.DsiViewer.sdlplugin'
 - name: solution
   value: '**/LanguageWeaverProvider.sln'
 - name : SonarID
-  value : DeveloperExperience_LWP
+  value : DeveloperExperience_LanguageWeaver
 - name : SonarName
   value : 'Language Weaver Provider'
 - name : ProjectVersion
@@ -37,6 +44,8 @@ steps:
       projectKey: $(SonarId)
       projectName: $(SonarName)
       projectVersion: $(ProjectVersion)
+
+  - template: build/jobs/build-sdlplugin.yml
   - task: SonarCloudAnalyze@3
     displayName: 'Run Code Analysis'
 
@@ -44,3 +53,5 @@ steps:
     inputs:
       pollingTimeoutSec: '300'
     displayName: 'Publish Quality Gate Result'
+
+  - template: build/jobs/publish-build-artifact-task.yml
