--- a/LanguageWeaver_Sonar.yml
+++ b/LanguageWeaver_Sonar.yml
@@ -22,7 +22,7 @@ variables:
 - name: buildConfiguration
   value: 'Release'
 - name: pathToPublish
-  value: 'DSI Viewer\Sdl.Community.SdiViewer\bin\Release\net48\Sdl.Community.DsiViewer.sdlplugin'
+  value: 'Language Weaver Provider\bin\Release\net48\LanguageWeaverProvider.sdlplugin'
 - name: solution
   value: '**/LanguageWeaverProvider.sln'
 - name : SonarID
