--- a/Code samples/ProjectAutomation/ProjectAutomation/App.config
+++ b/Code samples/ProjectAutomation/ProjectAutomation/App.config
@@ -1,18 +1,60 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup useLegacyV2RuntimeActivationPolicy="true">
-      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
   <runtime>
+    <NetFx40_PInvokeStackResilience enabled="1" />
+    <legacyCorruptedStateExceptionsPolicy enabled="true" />
+    <ThrowUnobservedTaskException enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+        <assemblyIdentity name="Microsoft.Extensions.DependencyModel" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
-	    <dependentAssembly>
-		    <assemblyIdentity name="icu.net" publicKeyToken="416fdd914afa6b66" culture="neutral" />
-		    <bindingRedirect oldVersion="0.0.0.0-2.7.0.0" newVersion="2.7.0.0" />
-	    </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.SqlClient" publicKeyToken="23ec7fc2d6eaa4a5" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <log4net>
+    <!-- Set levels to DEBUG for extended logging information -->
+    <appender name="RollingFile" type="Sdl.Desktop.Logger.LocalUserAppDataFileAppender, Sdl.Desktop.Logger">
+    </appender>
+    <!-- output to debug string -->
+    <appender name="OutputDebug" type="log4net.Appender.OutputDebugStringAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="INFO" />
+      <appender-ref ref="RollingFile" />
+      <appender-ref ref="OutputDebug" />
+    </root>
+    <logger name="Sdl.TranslationStudio">
+      <level value="INFO" />
+    </logger>
+    <logger name="Sdl.Desktop">
+      <level value="INFO" />
+    </logger>
+    <logger name="Sdl.ProjectApi">
+      <level value="INFO" />
+    </logger>
+    <logger name="Licensing">
+      <level value="INFO" />
+    </logger>
+    <!--<logger name="Sdl.MultiTerm">
+      <level value="DEBUG"/>
+    </logger>-->
+  </log4net>
 </configuration>
