--- a/IATERealTimeTerminologySonar.yml
+++ b/IATERealTimeTerminologySonar.yml
@@ -26,9 +26,9 @@ variables:
 - name: solution
   value: '**/Sdl.Community.IATETerminologyProvider.sln'
 - name : SonarID
-  value : IATE Real-time Terminology
+  value : IATE Real time Terminology
 - name : SonarName
-  value : 'IATE Real-time Terminology'
+  value : 'IATE Real time Terminology'
 - name : ProjectVersion
   value : $[counter(variables['Version.Patch'], 1)]
 
