--- a/Apply Studio Project Template/Sdl.Community.ApplyStudioProjectTemplate/Sdl.Community.ApplyStudioProjectTemplate.csproj
+++ b/Apply Studio Project Template/Sdl.Community.ApplyStudioProjectTemplate/Sdl.Community.ApplyStudioProjectTemplate.csproj
@@ -33,7 +33,7 @@
       <HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.Core.Settings">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Trados\Trados Studio\Studio18\Sdl.Core.Settings.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.Core.Settings.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.Desktop.IntegrationApi">
       <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.dll</HintPath>
