Trados Data Protection Suite 4.0.2.0 - SDLCOM-6480: Fix NRE

--- a/Trados Data Protection Suite/SDLDataProtectionSuite/Sdl.Community.SdlDataProtectionSuite.csproj
+++ b/Trados Data Protection Suite/SDLDataProtectionSuite/Sdl.Community.SdlDataProtectionSuite.csproj
@@ -101,6 +101,9 @@
 		</Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="Sdl.Versioning">
+      <HintPath>$(TradosFolder)\Sdl.Versioning.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
